...
  bool _closeButtonPressed = false;

  late Color _accentColor;

  final Map<String, List<IconData>> _iconCategories = {
    'All': [],
    'Games': [
      FontAwesomeIcons.dice,
      FontAwesomeIcons.diceOne,
      FontAwesomeIcons.diceTwo,
      FontAwesomeIcons.diceThree,
      FontAwesomeIcons.diceFour,
      FontAwesomeIcons.diceFive,
...
